Refactored.
git-svn-id: https://www.seasar.org/svn/s2container@3448 319488c0-e101-0410-93bc-b5e51f62721a